--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,14 @@
 
         <dependency>
             <groupId>de.btobastian.sdcf4j</groupId>
-            <!-- Possible artifact ids: sdcf4j-javacord, sdcf4j-jda3, sdcf4j-discord4j -->
             <artifactId>sdcf4j-jda3</artifactId>
             <version>1.0.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
         </dependency>
 
         <!-- Spring Boot -->
