--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>0.9.11</version>
         </dependency>
 
+        <!-- Audio -->
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.2.42</version>
+        </dependency>
+
         <!-- Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -97,6 +104,12 @@
 
 		<repository>
 			<id>jcenter</id>
+			<url>http://jcenter.bintray.com</url>
+		</repository>
+
+		<repository>
+			<id>central</id>
+			<name>bintray</name>
 			<url>http://jcenter.bintray.com</url>
 		</repository>
 	</repositories>
